fix: corrige duplicação de nós no JSON Elementor
- Refatora função deduplicateContainers() em pipeline.ts
- Remove concatenação indevida de widgets e children
- Preserva apenas primeira ocorrência de cada container
- Adiciona merge inteligente de estilos sem duplicar conteúdo
- Atualiza documentação em registro.md
- Build compilado e testado com sucesso

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "description": "Figma to Elementor Exporter",
     "main": "dist/code.js",
   "scripts": {
-        "build": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es6",
-        "watch": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es6 --watch",
+        "build": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es6 --loader:.md=text",
+        "watch": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es6 --loader:.md=text --watch",
         "test": "vitest run"
     },
     "devDependencies": {
