feat(media): implement DefaultMediaService for image resolution and upload handling
- Added DefaultMediaService class to manage image uploads and resolutions.
- Introduced methods for resolving images, processing widgets, and handling uploads.
- Implemented support for various widget types including image, icon, button, and galleries.
- Added simulation mode for testing without actual uploads.

test(media): add unit tests for DefaultMediaService

- Created comprehensive tests for image resolution and upload functionality.
- Verified correct behavior for different widget types and scenarios.
- Ensured that simulated uploads return expected results without altering schema.

feat(serializer): implement serialization service for SceneNode

- Developed DefaultSerializerService to serialize SceneNode structures.
- Included support for various node properties and children serialization.
- Added functionality to create snapshots of serialized nodes.

test(serializer): add tests for DefaultSerializerService

- Implemented tests to validate serialization of nodes with children and text metadata.
- Verified correct behavior of snapshot creation and flattening of serialized nodes.

feat(validator): implement validation service for schema and Elementor JSON

- Added DefaultValidatorService to validate PipelineSchema and Elementor JSON structures.
- Included methods for computing coverage between schema and Elementor data.

--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
     "version": "1.0.0",
     "description": "Figma to Elementor Exporter",
     "main": "dist/code.js",
-  "scripts": {
-        "build": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es6 --loader:.md=text",
-        "watch": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es6 --loader:.md=text --watch",
-        "test": "vitest run"
+    "scripts": {
+        "clean": "rimraf dist",
+        "build": "npm run clean && esbuild src/code.ts --bundle --outfile=dist/code.js --target=es2022 --loader:.md=text",
+        "watch": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es2022 --loader:.md=text --watch",
+        "typecheck": "tsc --noEmit",
+        "test": "vitest run",
+        "test:watch": "vitest",
+        "check": "npm run typecheck && npm run test"
     },
     "devDependencies": {
         "@figma/plugin-typings": "*",
+        "@types/node": "^24.10.1",
         "esbuild": "^0.27.0",
+        "rimraf": "^5.0.5",
         "typescript": "*",
         "vitest": "^1.6.0"
     }
