feat: enhance media service and telemetry with new options and compatibility layers
- Updated DefaultMediaService to handle imageId assignment more robustly.
- Expanded pipeline tests to include telemetry functionality and deterministic mode.
- Introduced compatibility layer with polyfills for modern JavaScript features.
- Added telemetry service for logging events, diffs, and snapshots with configurable options.
- Enhanced safe access utilities for safer property access in runtime.
- Updated UI to include new telemetry and deterministic options.
- Improved runtime health reporting with detailed warnings and error tracking.

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "dist/code.js",
     "scripts": {
         "clean": "rimraf dist",
-        "build": "npm run clean && esbuild src/code.ts --bundle --outfile=dist/code.js --target=es2022 --loader:.md=text",
-        "watch": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es2022 --loader:.md=text --watch",
+        "build": "esbuild src/code.ts --bundle --outfile=dist/code.js --target=es2017 --supported:optional-chain=false --supported:nullish-coalescing=false --supported:class-field=false --supported:top-level-await=false --loader:.md=text",
+        "watch": "esbuild src/code.ts --bundle --outfile=dist/code.js --watch --target=es2017 --supported:optional-chain=false --supported:nullish-coalescing=false --supported:class-field=false --supported:top-level-await=false --loader:.md=text",
         "typecheck": "tsc --noEmit",
         "test": "vitest run",
         "test:watch": "vitest",
