feat: Add logo with accompanying assets and UI integration.feat: Add logo with accompanying assets and UI integration.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Figma to Elementor",
+    "name": "Figma → WP Elementor",
     "id": "figma-to-elementor",
     "api": "1.0.0",
     "main": "dist/code.js",
