feat: implement new licensing system with client-side storage, backend validation, and usage tracking

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
     "editorType": [
         "figma"
     ],
+    "permissions": [
+        "currentuser"
+    ],
     "networkAccess": {
         "allowedDomains": [
             "*"
