--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@figma/plugin-typings": "*",
         "@types/node": "^24.10.1",
         "esbuild": "^0.27.0",
+        "html-minifier-terser": "^7.2.0",
+        "javascript-obfuscator": "^5.0.1",
         "rimraf": "^5.0.5",
         "typescript": "*",
         "vitest": "^1.6.0"
